--- a/Classes/LinphoneUI/en.lproj/UIMainBar.xib
+++ b/Classes/LinphoneUI/en.lproj/UIMainBar.xib
@@ -40,8 +40,10 @@
 					<object class="IBUIView" id="83510153">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">-2147483356</int>
+						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrame">{{0, 11}, {320, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="698962606"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -60,6 +62,8 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{0, 77}, {320, 2000}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -71,8 +75,9 @@
 					<object class="IBUIButton" id="318948703">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{64, 77}</string>
+						<string key="NSFrame">{{0, 10.5}, {64, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="83510153"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -104,7 +109,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="NSCustomResource" key="IBUIHighlightedBackgroundImage">
+						<object class="NSCustomResource" key="IBUIHighlightedBackgroundImage" id="1036282628">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">history_over.png</string>
 						</object>
@@ -112,10 +117,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">history_selected.png</string>
 						</object>
-						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">history_default.png</string>
-						</object>
+						<reference key="IBUINormalBackgroundImage" ref="1036282628"/>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="984701795">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
@@ -135,6 +137,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{21, 21}</string>
 								<reference key="NSSuperview" ref="698962606"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="364959328"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -149,6 +152,7 @@
 								<int key="NSvFlags">256</int>
 								<string key="NSFrame">{{2, 2}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="698962606"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="617445003"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -175,6 +179,7 @@
 						</array>
 						<string key="NSFrame">{{38, 1}, {21, 21}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="307047814"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="41402419">
@@ -188,8 +193,9 @@
 					<object class="IBUIButton" id="617445003">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{64, 0}, {64, 77}}</string>
+						<string key="NSFrame">{{64, 11}, {64, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="562688945"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -227,9 +233,10 @@
 					<object class="IBUIButton" id="60891552">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{256, 0}, {64, 77}}</string>
+						<string key="NSFrame">{{256, 11}, {64, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
-						<reference key="NSNextKeyView" ref="55915342"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="760939856"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -266,9 +273,10 @@
 					<object class="IBUIButton" id="562688945">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{128, 0}, {64, 77}}</string>
+						<string key="NSFrame">{{128, 11}, {64, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
-						<reference key="NSNextKeyView" ref="60891552"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="55915342"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -287,7 +295,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">dialer_selected.png</string>
 						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
+						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">dialer_default.png</string>
 						</object>
@@ -304,8 +312,9 @@
 					<object class="IBUIButton" id="55915342">
 						<reference key="NSNextResponder" ref="1018893129"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{192, 0}, {64, 77}}</string>
+						<string key="NSFrame">{{192, 11}, {64, 66}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="154031566"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -349,6 +358,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{21, 21}</string>
 								<reference key="NSSuperview" ref="154031566"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="540244639"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -360,7 +370,8 @@
 								<int key="NSvFlags">256</int>
 								<string key="NSFrame">{{2, 2}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="154031566"/>
-								<reference key="NSNextKeyView" ref="760939856"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="60891552"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -383,6 +394,7 @@
 						</array>
 						<string key="NSFrame">{{197, 1}, {21, 21}}</string>
 						<reference key="NSSuperview" ref="1018893129"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="651674302"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="41402419"/>
@@ -391,8 +403,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 77}</string>
+				<string key="NSFrameSize">{320, 73}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="318948703"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -594,12 +607,6 @@
 						<string key="objectName">history</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="617445003"/>
-						<reference key="parent" ref="1018893129"/>
-						<string key="objectName">contacts</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
 						<reference key="object" ref="562688945"/>
 						<reference key="parent" ref="1018893129"/>
@@ -661,6 +668,12 @@
 						<reference key="parent" ref="1018893129"/>
 						<string key="objectName">settings</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">8</int>
+						<reference key="object" ref="617445003"/>
+						<reference key="parent" ref="1018893129"/>
+						<string key="objectName">contacts</string>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -699,28 +712,138 @@
 			<nil key="sourceID"/>
 			<int key="maxID">45</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TPMultiLayoutViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="landscapeView">UIView</string>
+						<string key="portraitView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="landscapeView">
+							<string key="name">landscapeView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="portraitView">
+							<string key="name">portraitView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TPMultiLayoutViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIMainBar</string>
+					<string key="superclassName">TPMultiLayoutViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onChatClick:">id</string>
+						<string key="onContactsClick:">id</string>
+						<string key="onDialerClick:">id</string>
+						<string key="onHistoryClick:">id</string>
+						<string key="onSettingsClick:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onChatClick:">
+							<string key="name">onChatClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onContactsClick:">
+							<string key="name">onContactsClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onDialerClick:">
+							<string key="name">onDialerClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onHistoryClick:">
+							<string key="name">onHistoryClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onSettingsClick:">
+							<string key="name">onSettingsClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="chatButton">UIButton</string>
+						<string key="chatNotificationLabel">UILabel</string>
+						<string key="chatNotificationView">UIView</string>
+						<string key="contactsButton">UIButton</string>
+						<string key="dialerButton">UIButton</string>
+						<string key="historyButton">UIButton</string>
+						<string key="historyNotificationLabel">UILabel</string>
+						<string key="historyNotificationView">UIView</string>
+						<string key="settingsButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="chatButton">
+							<string key="name">chatButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="chatNotificationLabel">
+							<string key="name">chatNotificationLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="chatNotificationView">
+							<string key="name">chatNotificationView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contactsButton">
+							<string key="name">contactsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="dialerButton">
+							<string key="name">dialerButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="historyButton">
+							<string key="name">historyButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="historyNotificationLabel">
+							<string key="name">historyNotificationLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="historyNotificationView">
+							<string key="name">historyNotificationView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="settingsButton">
+							<string key="name">settingsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIMainBar.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="chat_default.png">{128, 154}</string>
-			<string key="chat_over.png">{128, 154}</string>
-			<string key="chat_selected.png">{128, 154}</string>
-			<string key="contacts_default.png">{128, 154}</string>
-			<string key="contacts_over.png">{128, 154}</string>
-			<string key="contacts_selected.png">{128, 154}</string>
-			<string key="dialer_default.png">{128, 154}</string>
-			<string key="dialer_over.png">{128, 154}</string>
-			<string key="dialer_selected.png">{128, 154}</string>
-			<string key="history_default.png">{128, 154}</string>
+			<string key="chat_default.png">{64, 49}</string>
+			<string key="chat_over.png">{64, 49}</string>
+			<string key="chat_selected.png">{64, 49}</string>
+			<string key="contacts_default.png">{128, 125}</string>
+			<string key="contacts_over.png">{128, 125}</string>
+			<string key="contacts_selected.png">{128, 125}</string>
+			<string key="dialer_default.png">{128, 125}</string>
+			<string key="dialer_over.png">{128, 125}</string>
+			<string key="dialer_selected.png">{128, 125}</string>
 			<string key="history_notification.png">{43, 43}</string>
-			<string key="history_over.png">{128, 154}</string>
-			<string key="history_selected.png">{128, 154}</string>
-			<string key="settings_default.png">{128, 154}</string>
-			<string key="settings_over.png">{128, 154}</string>
-			<string key="settings_selected.png">{128, 154}</string>
+			<string key="history_over.png">{128, 134}</string>
+			<string key="history_selected.png">{128, 133}</string>
+			<string key="settings_default.png">{128, 125}</string>
+			<string key="settings_over.png">{128, 125}</string>
+			<string key="settings_selected.png">{128, 125}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
