--- a/Classes/LinphoneUI/en.lproj/UIContactDetailsHeader.xib
+++ b/Classes/LinphoneUI/en.lproj/UIContactDetailsHeader.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-13, -5}, {131, 107}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="906825234"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {65, 65}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="854571707"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -71,6 +73,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {65, 65}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="959860357"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -112,6 +115,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{0, 37}, {199, 43}}</string>
 								<reference key="NSSuperview" ref="959860357"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="451441616"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -122,7 +126,7 @@
 									<string key="IBUIAccessibilityLabel">Contact's name</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Contact1</string>
+								<string key="IBUIText">hahaaah</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
@@ -143,6 +147,7 @@
 						</array>
 						<string key="NSFrame">{{101, 0}, {219, 80}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="683404399"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="813032296">
@@ -157,9 +162,10 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUITableView" id="579848711">
 								<reference key="NSNextResponder" ref="451441616"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{219, 160}</string>
+								<int key="NSvFlags">-2147483374</int>
+								<string key="NSFrame">{{39, 0}, {115, 160}}</string>
 								<reference key="NSSuperview" ref="451441616"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -178,8 +184,9 @@
 								<float key="IBUISectionFooterHeight">10</float>
 							</object>
 						</array>
-						<string key="NSFrame">{{101, 0}, {219, 160}}</string>
+						<string key="NSFrame">{{166, 0}, {154, 160}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579848711"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="813032296"/>
@@ -188,6 +195,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 160}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="452773126"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="813032296"/>
@@ -243,6 +251,14 @@
 						<reference key="destination" ref="683404399"/>
 					</object>
 					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">contactName</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="683404399"/>
+					</object>
+					<int key="connectionID">24</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -368,9 +384,70 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">23</int>
+			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">UIContactDetailsHeader</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">onAvatarClick:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">onAvatarClick:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">onAvatarClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="addressLabel">UILabel</string>
+						<string key="avatarImage">UIImageView</string>
+						<string key="contactDetailsDelegate">id</string>
+						<string key="contactName">UILabel</string>
+						<string key="editView">UIView</string>
+						<string key="normalView">UIView</string>
+						<string key="tableView">UITableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="addressLabel">
+							<string key="name">addressLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="avatarImage">
+							<string key="name">avatarImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contactDetailsDelegate">
+							<string key="name">contactDetailsDelegate</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contactName">
+							<string key="name">contactName</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="editView">
+							<string key="name">editView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="normalView">
+							<string key="name">normalView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tableView">
+							<string key="name">tableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIContactDetailsHeader.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
