--- a/Classes/LinphoneUI/en.lproj/UIContactDetailsHeader.xib
+++ b/Classes/LinphoneUI/en.lproj/UIContactDetailsHeader.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-13, -5}, {131, 107}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="906825234"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -58,7 +57,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {65, 65}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="854571707"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -73,7 +71,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {65, 65}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="959860357"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -115,7 +112,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{0, 37}, {199, 43}}</string>
 								<reference key="NSSuperview" ref="959860357"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="451441616"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -147,7 +143,6 @@
 						</array>
 						<string key="NSFrame">{{101, 0}, {219, 80}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="683404399"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="813032296">
@@ -165,7 +160,6 @@
 								<int key="NSvFlags">-2147483374</int>
 								<string key="NSFrame">{{39, 0}, {115, 160}}</string>
 								<reference key="NSSuperview" ref="451441616"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -186,7 +180,6 @@
 						</array>
 						<string key="NSFrame">{{166, 0}, {154, 160}}</string>
 						<reference key="NSSuperview" ref="1033790597"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579848711"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="813032296"/>
@@ -195,7 +188,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 160}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="452773126"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="813032296"/>
@@ -386,68 +378,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">UIContactDetailsHeader</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">onAvatarClick:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">onAvatarClick:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">onAvatarClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="addressLabel">UILabel</string>
-						<string key="avatarImage">UIImageView</string>
-						<string key="contactDetailsDelegate">id</string>
-						<string key="contactName">UILabel</string>
-						<string key="editView">UIView</string>
-						<string key="normalView">UIView</string>
-						<string key="tableView">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="addressLabel">
-							<string key="name">addressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="avatarImage">
-							<string key="name">avatarImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contactDetailsDelegate">
-							<string key="name">contactDetailsDelegate</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contactName">
-							<string key="name">contactName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="editView">
-							<string key="name">editView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="normalView">
-							<string key="name">normalView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableView">
-							<string key="name">tableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIContactDetailsHeader.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
