--- a/Classes/en.lproj/ContactDetailsViewController.xib
+++ b/Classes/en.lproj/ContactDetailsViewController.xib
@@ -152,6 +152,7 @@
 									<string key="IBUIAccessibilityLabel">Edit</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<bool key="IBUIEnabled">NO</bool>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<bool key="IBUIAdjustsImageWhenHighlighted">NO</bool>
